--- a/day2WEBPAGE/index.html
+++ b/day2WEBPAGE/index.html
@@ -14,10 +14,9 @@
     Project PB, a joint venture of SIPC Brazil, organized the ISul I6 Well Drilling and Completion Commendation Meeting in Petrobras, to celebrate the record-setting short time of drilling and completion ISul I6 well in Brazil pre-salt.
 This important development injection well is located in Cernambi oilfield, and its first production is forthcoming. Drilling was started on March 31st with a schedule of 71 days of drilling and 60 of completion, while it actually took
 60.5 days to drill and 31.3 to complete, a sum of 91.8 days, 39.2 days shorter than it was planned. Therefore, it became the first well since 2004 that took less than 100 days for drilling and completion in pre-salt of Santos Basin in Brazil.
-</artical>
-    <section id="GoogleAds" class=""gooAds">
+</artical></section>
+    <section>
 This would show google ads</section>
-    </section>
 <section id="The Second one">
 <artical>
     To carry forward the tradition virtuesof the Chinese nation, show the responsible image of SIPC and answer the callof the Working Committee of the Labor Union of the Group of educationdenotation and aiding of “Love Station”, on March 27,
